# fp-cpp20

./: .clangd  .gitignore  BUILD_OPTIMIZATION_REPORT.md  CLAUDE_MEMORY.md  CMakeLists.txt  CONVERSATION_CONTEXT.md  MANIFESTO.md  NEXT_SESSION_BOOTSTRAP.md  PROTOCOL_FULL_POWER.md  QUICK_START.md  README.md  STRUCTURE.md  TEAM_DNA.md  ULTRA_INSTINCT_CPP20.md  ULTRA_INSTINCT_CPP20_v2.md  benchmark-build.sh  setup-turbo-build.sh
.claude/agents/: agent-team-optimizer.md  agent-usage-monitor.md  api-stability-sentinel.md  benchmark-beast.md  cmake-wizard.md  continuous-improvement-facilitator.md  cpp20-expert.md  cpp20-test-first-writer.md  documentation-quality-guardian.md  example-code-curator.md  haskell-cpp-project-manager.md  haskell-to-cpp20-translator.md  instant-compiler.md  performance-benchmark-guardian.md  tdd-enforcer.md  test-generator.md  turbo-implementer.md  workflow-coordinator.md
cmake/: AutoDiscovery.cmake  CompilerOptimizations.cmake
docs/: AGENT_TEAM_STATUS.md  DO_NOTATION_GUIDE.md  ROADMAP.md  TDD_ROADMAP.md  WORKFLOW_PATTERNS.md
examples/: 01_beautiful_syntax.cpp  CMakeLists.txt  constexpr_monad_demo.cpp  do_notation_examples.cpp  dsl_http_server.cpp  meta_dsl_ultimate.cpp  meta_pure.cpp  template_power.cpp
include/fp20/: constexpr_monads.hpp  do_notation.hpp  either.hpp  either_identity_concepts.hpp  fp20.hpp  identity.hpp  io.hpp  io_concepts.hpp  list.hpp  list_concepts.hpp  operators.hpp  reader_concepts.hpp  state.hpp  state_concepts.hpp  transformers.hpp  writer_concepts.hpp
include/fp20/concepts/: advanced.hpp  applicative.hpp  cont_concepts.hpp  either_identity_concepts.hpp  functor.hpp  io_concepts.hpp  monad.hpp  monadplus.hpp  monoid.hpp  reader_concepts.hpp  st_concepts.hpp  state_concepts.hpp  writer_concepts.hpp
include/fp20/monads/: cont.hpp  list.hpp  reader.hpp  st.hpp  writer.hpp
include/fp20/transformers/: either_t.hpp  maybe_t.hpp  reader_t.hpp  state_t.hpp  writer_t.hpp
segy/: CMakeLists.txt  README.md
segy/examples/: simple_reader.cpp  simple_writer.cpp
segy/include/segy/: segy.hpp
segy/include/segy/concepts/: segy_concepts.hpp
segy/include/segy/core/: endian.hpp  headers.hpp  trace.hpp
segy/include/segy/io/: reader.hpp  writer.hpp
segy/tests/compilation/: test_concepts.cpp
segy/tests/unit/: test_endian.cpp  test_headers.cpp  test_reader_writer.cpp  test_trace.cpp
tests/: CMakeLists.txt  test_do_notation.cpp  test_main.cpp
tests/compilation/: STATE_IMPLEMENTATION_GUIDE.md  STATE_MONAD_TEST_SUMMARY.md  TEST_MONAD_COVERAGE.md  VERIFICATION_FP-004a.md  test_applicative_concepts.cpp  test_compile_time_functor.cpp  test_concepts.cpp  test_cont_monad.cpp  test_do_notation_compile.cpp  test_either_identity.cpp  test_io_monad.cpp  test_list_monad.cpp  test_monad_concept.cpp  test_monadplus.cpp  test_reader_monad.cpp  test_reader_monad_summary.md  test_st_monad.cpp  test_state_monad.cpp  test_writer_monad.cpp  test_writer_monad_summary.md
tests/properties/: test_functor_properties.cpp
tests/runtime/: test_monad_runtime.cpp
tests/unit/: test_applicative_concept.cpp  test_applicative_laws.cpp  test_functor_concept.cpp  test_functor_instances.cpp  test_functor_laws.cpp  test_main.cpp
